# simple-os-simulator

./: P_END  README.md  cpu_inst.c  e  inmanip.c  main.c  meson.build  prueba.c
include/: cpu.h  inmanip.h
src/: cpu.c  cpu_inst.c  main.c  meson.build  pcb.c
tests/: cpu_inst_test.c  meson.build  test_main.c
